@@ -1,8 +1,8 @@
-#Wed Mar 17 12:58:42 EST 2010
+#Fri Mar 19 09:26:19 EST 2010
 major_version=2
 datafiles=../eLife_server/datafiles
-minor_version=3
 port=8082
+minor_version=4
 eSmart_install=../
-web_base=../monitor_web
 app_name=eLife_monitor
+web_base=../monitor_web
